Update colors for contrast issues

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ footer {
 }
 
 footer p {
-  color: #eeaadc;
+  color: #99367f;
   font-family: Georgia, serif;
   font-size: 15px;
   background: white;
